@@ -101,12 +101,12 @@ sub read {
                 $file = $root->fetch_element('Files')->fetch_with_id(index => $v, check => $check) ;
                 $object = $file ;
             }
-            elsif ($key =~ /licence/i) {
-                $logger->warn("Found UK spelling for $key: $v. $key will be converted to License");
-                _store_file_license ($file->fetch_element('License'), $v ,$check);
-            }
-            elsif ($key =~ /license/i) {
-                _store_file_license ($file->fetch_element('License'), $v ,$check);
+            elsif ($key =~ /licen[sc]e/i) {
+                $logger->warn("Found UK spelling for $key: $v. $key will be converted to License")
+                    if $key =~ /license/ ;
+                my $lic_node = defined $file ? $file->fetch_element('License') 
+                             :                 $root->fetch_element('Global-License') ;
+                _store_file_license ($lic_node, $v ,$check);
             }
             elsif (my $found = $object->find_element($key, case => 'any')) { 
                 my $target = $object->fetch_element($found) ;
@@ -152,6 +152,7 @@ sub _store_file_license {
     my ($lic_object, $v, $check) = @_ ;
 
     chomp $v ;
+    $logger->debug("_store_file_license check $check called on ".$lic_object->name." = $v");
     my ( $lic_line, $lic_text ) = split /\n/, $v, 2 ;
     $lic_line =~ s/\s+$//;
 
@@ -241,7 +242,7 @@ sub write {
         $lic_text .= " with $exception exception" if defined $exception;
         my $full_lic_text = $node->fetch_element_value('full_license');
         $lic_text .= "\n" . $full_lic_text if defined $full_lic_text;
-        push @{$data_ref->{one}}, License => $lic_text;
+        push @{$data_ref->{one}}, License => $lic_text if defined $lic_text;
     };
 
     my $file_cb = sub {
